tests/compile-fail/from_expr.stderr
error: `from_expr` cannot be used on enums with non-skipped unit variants because it conflicts with the generated impl
  --> tests/compile-fail/from_expr.rs:16:23
   |
16 | #[darling(from_expr = |expr| Ok(HasUnits::Variant2))]
   |                       ^

error: `from_expr` cannot be used on newtype structs because the implementation is entirely delegated to the inner type
  --> tests/compile-fail/from_expr.rs:29:23
   |
29 | #[darling(from_expr = newtype_from_expr)]
   |                       ^^^^^^^^^^^^^^^^^
